Added personal and group chat functionalities