@@ -1,19 +1,37 @@
 package bg.sofia.uni.fmi.mjt.chatty.server.command;
 
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 public class CommandCreator {
 
     public static Command newCommand(String input) {
-        List<String> tokens = CommandCreator.getTokens(input);
+        List<String> tokens = getTokens(input);
         String[] args = tokens.subList(1, tokens.size()).toArray(new String[0]);
 
-        return new Command(tokens.get(0), args);
+        return new Command(tokens.getFirst(), args);
     }
 
     private static List<String> getTokens(String input) {
-        return Arrays.stream(input.split(" ")).toList();
+        if (!input.startsWith(CommandType.SEND_MESSAGE.toString())) {
+            return Arrays.stream(input.split(" ")).toList();
+        }
+
+        String[] tokensByQuote = input.split("\"");
+
+        if (tokensByQuote.length != 3) {
+            throw new IllegalArgumentException("Incorrect command format");
+        }
+
+        String message = tokensByQuote[1];
+
+        String[] noMessageTokens = input.replace(" \"" + message + "\"", "").split(" ");
+
+        List<String> result = new LinkedList<>(List.of(noMessageTokens));
+        result.add(1, message);
+
+        return result;
     }
 
 }
